src/App.css
@import "tailwindcss";

@layer base {
  html {
    @apply select-none;
  }

  ::selection {
    @apply bg-[#ac94ec];
  }
}

@theme {
  --color-bright: light-dark(#ffffff, #ffffff);
  --color-light: light-dark(#ebebeb, #ebebeb);
  --color-dark: light-dark(#212121, #212121);
  --color-mid-light: light-dark(#5c5c5c, #5c5c5c);
  --color-mid-dark: light-dark(#333333, #333333);
}

